--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 <body>
     <div id="app">
       {{msg}}
-  
+       </br>
+  <?php
+        echo "hello";
+        
+        >
   </div>
   
   <script>
